--- a/css/style.css
+++ b/css/style.css
@@ -17,8 +17,9 @@
 }
 
 .container {
-  width: 1011px;
-  padding: 0 15px 0;
+  max-width: 1111px;
+  width: 100%;
+  padding: 0 15px;
   margin: 0 auto;
 }
 
@@ -26,9 +27,13 @@
 
 .header {
   background-image: url(../img/header_img.png);
+  background-position: top;
   background-repeat: no-repeat;
-  background-size: contain;
-  max-width: 100%;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #d83526;
+  width: 100%;
+  height: 100vh;
 }
 
 .header__top {
@@ -39,11 +44,20 @@
 }
 
 #header__logo {
-  width: 289px;
+  max-width: 100%;
+  height: auto;
 }
 
 .header__list {
   display: flex;
+}
+
+.header__link {
+  font-size: 18px;
+  font-family: Montserrat;
+  line-height: 1.222;
+  padding: 12px 15px;
+  transition: 0.3s ease;
 }
 
 .icon-menu {
@@ -57,21 +71,12 @@
   padding-right: 15px;
 }
 
-.header__link {
-  font-size: 18px;
-  font-family: Montserrat;
-  line-height: 1.222;
-  padding: 12px 15px;
-  transition: 0.3s ease;
-}
-
 .header__link:hover {
   background-color: #130e27;
   border-radius: 5px;
 }
 
 .header__content {
-  /* flex-basis: 460px; */
   padding: 143px 0 130px;
 }
 
@@ -89,17 +94,17 @@
 }
 
 .header__desc {
-  width: 460px;
+  max-width: 460px;
   padding-top: 49px;
   line-height: 1.4;
 }
+
 /* HEADER END */
 
 /* SECTION-SERVICES START */
 
 .services {
   background: #fff;
-  background-size: 1200px 482px;
 }
 
 .services__title,
@@ -141,7 +146,6 @@
 
 .story {
   background-color: #130e27;
-  background-size: 1200px 119px;
 }
 
 .story__inner {
@@ -183,7 +187,6 @@
 
 .pricing {
   background-color: #efefef;
-  background-size: 1200px 614px;
   text-align: center;
 }
 
@@ -264,7 +267,6 @@
 
 .footer {
   background-color: rgb(19, 14, 39);
-  background-size: 1200px 188px;
 }
 
 .footer__inner {
@@ -283,3 +285,14 @@
 }
 
 /* FOOTER END */
+
+/* MEDIA START */
+
+@media (max-width: 992px) {
+  .header__list {
+    display: none;
+  }
+  .icon-menu {
+    display: block;
+  }
+}
