--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,7 @@
 }
 
 #header__logo {
-  max-width: 100%;
-  height: auto;
+  max-width: 23vw;
 }
 
 .header__list {
@@ -76,8 +75,15 @@
   border-radius: 5px;
 }
 
+.header__inner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .header__content {
-  padding: 143px 0 130px;
+  flex-basis: 524px;
+  padding: 143px 0 0;
 }
 
 .header__title,
@@ -104,7 +110,7 @@
 /* SECTION-SERVICES START */
 
 .services {
-  background: #fff;
+  background-color: #fff;
 }
 
 .services__title,
@@ -120,6 +126,10 @@
   color: rgb(19, 14, 39);
 }
 
+.services__content {
+  text-align: center;
+}
+
 .services__items {
   display: flex;
   justify-content: space-between;
@@ -128,13 +138,11 @@
 }
 
 .item__img {
-  max-width: 100%;
-  height: auto;
+  max-width: 16vw;
 }
 
 .item__text {
   width: 162px;
-  text-align: center;
   color: rgb(22, 22, 22);
   line-height: 1.4;
   padding-top: 25px;
@@ -157,6 +165,7 @@
 .story__desc {
   width: 601px;
   line-height: 1.4;
+  padding: 15px 0;
 }
 
 .story__btn {
@@ -164,7 +173,7 @@
   background-color: rgb(198, 35, 20);
   width: 269px;
   height: 64px;
-  margin: 31px 15px 24px 0;
+  margin: 31px 15px 24px;
 }
 
 .story__btn:hover {
@@ -281,7 +290,7 @@
 }
 
 #footer__logo {
-  width: 195px;
+  max-width: 15vw;
 }
 
 /* FOOTER END */
@@ -295,4 +304,161 @@
   .icon-menu {
     display: block;
   }
+  .story__btn {
+    width: 250px;
+  }
 }
+
+@media (max-width: 768px) {
+  .header__title,
+  .header__span {
+    font-size: 85px;
+  }
+  .header__desc {
+    max-width: 438px;
+    padding-top: 30px;
+    font-size: 19px;
+  }
+  .services__title,
+  .services__span {
+    font-size: 45px;
+    padding: 20px 0 0;
+  }
+  .services__items {
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 60px 0 40px;
+  }
+  .item__text {
+    font-size: 17px;
+    padding: 20px 0;
+  }
+  .story__desc {
+    width: 384px;
+    font-size: 17px;
+  }
+  .story__span {
+    font-size: 19px;
+  }
+  .pricing__title {
+    font-size: 45px;
+    padding: 40px 0 30px;
+  }
+  .pricing__cards {
+    flex-direction: column;
+    align-items: center;
+  }
+  .card,
+  #card2 {
+    width: 255px;
+    height: 370px;
+    margin-bottom: 20px;
+  }
+  .card__price {
+    font-size: 50px;
+  }
+  .card__list {
+    font-size: 19px;
+  }
+  .card__span {
+    font-size: 20px;
+  }
+  .card__btn {
+    width: 180px;
+    height: 44px;
+  }
+  .footer__text,
+  .footer__span {
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 576px) {
+  .header__content {
+    text-align: center;
+  }
+
+  .header__title,
+  .header__span {
+    font-size: 80px;
+  }
+
+  .header__desc {
+    padding-top: 28px;
+    font-size: 18px;
+    margin: 0 auto;
+  }
+  .services__title,
+  .services__span {
+    font-size: 40px;
+  }
+  .story__desc {
+    width: 389px;
+    font-size: 16px;
+  }
+  .pricing__title {
+    font-size: 40px;
+    padding: 25px 0 15px;
+  }
+  .card,
+  #card2 {
+    width: 250px;
+    height: 335px;
+  }
+  .card__title {
+    font-size: 20px;
+    padding: 25px 0 15px;
+  }
+  .card__price {
+    font-size: 45px;
+  }
+  .card__list {
+    font-size: 17px;
+  }
+  .card__span {
+    font-size: 19px;
+  }
+}
+
+@media (max-width: 512px) {
+  .header__title,
+  .header__span {
+    font-size: 49px;
+  }
+  .header__desc {
+    max-width: 377px;
+    font-size: 16px;
+  }
+  .footer__text {
+    font-size: 14px;
+  }
+  .header__content {
+    padding: 100px 0 0;
+  }
+  .services__title,
+  .services__span {
+    font-size: 30px;
+  }
+  .services__items {
+    padding: 40px 0 30px;
+  }
+  .item__text {
+    font-size: 15px;
+    width: 105px;
+  }
+  .story__desc,
+  .story__span {
+    font-size: 15px;
+  }
+  .pricing__title {
+    font-size: 35px;
+  }
+  .card__price {
+    font-size: 40px;
+  }
+  .card__span {
+    font-size: 17px;
+  }
+}
+
+/* MEDIA END */
