adaptiv-stage-2-dirty

--- a/css/style.css
+++ b/css/style.css
@@ -375,6 +375,9 @@
 }
 
 @media (max-width: 576px) {
+  .header {
+    background-position: center;
+  }
   .header__content {
     text-align: center;
   }
