--- a/css/style.css
+++ b/css/style.css
@@ -44,7 +44,7 @@
 }
 
 #header__logo {
-  max-width: 23vw;
+  max-width: 40vw;
 }
 
 .header__list {
@@ -290,12 +290,33 @@
 }
 
 #footer__logo {
-  max-width: 15vw;
+  max-width: 30vw;
+  padding-left: 15px;
 }
 
 /* FOOTER END */
 
 /* MEDIA START */
+
+@media (orientation: landscape) and (max-width: 1024px) {
+  .header__content {
+    padding: 105px 0 0;
+  }
+  .header__title,
+  .header__span {
+    font-size: 80px;
+  }
+  .header__desc {
+    font-size: 19px;
+    padding-top: 30px;
+  }
+}
+
+@media (orientation: portrait) and (min-width: 912px) and (max-width: 1024px) {
+  .header {
+    height: 56vh;
+  }
+}
 
 @media (max-width: 992px) {
   .header__list {
@@ -309,41 +330,129 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 920px) and (max-height: 500px) {
+  #header__logo {
+    max-width: 30vw;
+  }
+  .header__content {
+    padding: 60px 0 0;
+  }
   .header__title,
   .header__span {
-    font-size: 85px;
+    font-size: 60px;
   }
   .header__desc {
-    max-width: 438px;
-    padding-top: 30px;
-    font-size: 19px;
+    font-size: 17px;
+    padding-top: 25px;
   }
   .services__title,
   .services__span {
-    font-size: 45px;
-    padding: 20px 0 0;
+    font-size: 40px;
   }
   .services__items {
-    flex-wrap: wrap;
-    justify-content: space-around;
-    padding: 60px 0 40px;
+    padding: 45px 0 50px;
   }
   .item__text {
     font-size: 17px;
-    padding: 20px 0;
-    width: 111px;
   }
   .story__desc {
-    width: 384px;
     font-size: 17px;
   }
   .story__span {
     font-size: 19px;
   }
   .pricing__title {
+    font-size: 40px;
+    padding: 30px 0 20px;
+  }
+  .card {
+    height: 335px;
+    margin-bottom: 40px;
+  }
+  .card__title {
+    font-size: 21px;
+    padding: 20px 0;
+  }
+  .card__price {
     font-size: 45px;
-    padding: 40px 0 30px;
+  }
+  .card__list {
+    font-size: 17px;
+  }
+  .card__span {
+    font-size: 19px;
+  }
+  .card__btn {
+    width: 175px;
+  }
+  .footer__inner {
+    padding: 35px 0 45px;
+  }
+  .footer__text,
+  .footer__span {
+    font-size: 17px;
+  }
+  #footer__logo {
+    max-width: 20vw;
+  }
+}
+
+@media (orientation: portrait) and (min-width: 400px) and (max-width: 820px) {
+  .header {
+    height: 70vh;
+  }
+}
+
+@media (min-width: 601px) and (max-width: 722px) {
+  .header {
+    height: 100vh;
+  }
+}
+
+@media (max-width: 680px) {
+  .header__content {
+    text-align: center;
+    padding: 100px 0 0;
+  }
+  .header__title,
+  .header__span {
+    font-size: 49px;
+  }
+  .header__desc {
+    font-size: 16px;
+    padding-top: 25px;
+    margin: 0 auto;
+  }
+  .services__title,
+  .services__span {
+    font-size: 30px;
+    padding: 15px 0 0;
+  }
+  .services__items {
+    flex-wrap: wrap;
+    justify-content: space-around;
+    padding: 40px 0 29px;
+  }
+  .item__text {
+    font-size: 16px;
+    width: 129px;
+    padding: 20px 0;
+  }
+  .story__desc {
+    width: 307px;
+    font-size: 16px;
+  }
+  .story__span {
+    font-size: 14px;
+  }
+  .story__btn {
+    width: 155px;
+    height: 50px;
+  }
+  .pricing__title,
+  .pricing__span {
+    font-size: 30px;
+    padding: 25px 0 20px;
   }
   .pricing__cards {
     flex-direction: column;
@@ -351,60 +460,9 @@
   }
   .card,
   #card2 {
-    width: 255px;
-    height: 370px;
-    margin-bottom: 20px;
-  }
-  .card__price {
-    font-size: 50px;
-  }
-  .card__list {
-    font-size: 19px;
-  }
-  .card__span {
-    font-size: 20px;
-  }
-  .card__btn {
-    width: 180px;
-    height: 44px;
-  }
-  .footer__text,
-  .footer__span {
-    font-size: 16px;
-  }
-}
-
-@media (max-width: 576px) {
-  .header__content {
-    text-align: center;
-  }
-
-  .header__title,
-  .header__span {
-    font-size: 80px;
-  }
-
-  .header__desc {
-    padding-top: 28px;
-    font-size: 18px;
-    margin: 0 auto;
-  }
-  .services__title,
-  .services__span {
-    font-size: 40px;
-  }
-  .story__desc {
-    width: 389px;
-    font-size: 16px;
-  }
-  .pricing__title {
-    font-size: 40px;
-    padding: 25px 0 15px;
-  }
-  .card,
-  #card2 {
     width: 250px;
-    height: 335px;
+    height: 333px;
+    margin-bottom: 20px;
   }
   .card__title {
     font-size: 20px;
@@ -414,57 +472,71 @@
     font-size: 45px;
   }
   .card__list {
-    font-size: 17px;
+    font-size: 16px;
   }
   .card__span {
-    font-size: 19px;
+    font-size: 16px;
+  }
+  .card__btn {
+    width: 180px;
+    height: 45px;
+  }
+  .footer__text,
+  .footer__span {
+    font-size: 16px;
+  }
+  .footer__inner {
+    padding: 40px 0 50px;
   }
 }
 
-@media (max-width: 512px) {
-  .header__title,
-  .header__span {
-    font-size: 49px;
-  }
-  .header__desc {
-    max-width: 377px;
-    font-size: 16px;
-  }
-  .footer__text {
-    font-size: 14px;
+@media (min-width: 360px) and (max-width: 399px) {
+  .header {
+    height: 70vh;
   }
   .header__content {
-    padding: 100px 0 0;
+    padding: 80px 0 0;
   }
-  .services__title,
-  .services__span {
-    font-size: 30px;
+}
+
+@media (max-width: 315px) {
+  .header {
+    height: 67vh;
   }
-  .services__items {
-    padding: 40px 0 30px;
+  .header__content {
+    padding: 80px 0 0;
+  }
+  .header__title,
+  .header__span {
+    font-size: 43px;
+  }
+  .header__desc {
+    font-size: 15px;
   }
   .item__text {
     font-size: 15px;
-    width: 95px;
+    width: 119px;
+    padding: 15px 0;
   }
-  .story__desc,
+  .story__desc {
+    font-size: 10px;
+  }
+  .story__btn {
+    width: 180px;
+    height: 40px;
+  }
   .story__span {
-    font-size: 15px;
-  }
-  .pricing__title {
-    font-size: 35px;
+    font-size: 11px;
   }
   .card__price {
     font-size: 40px;
   }
-  .card__span {
-    font-size: 17px;
+  .card__list {
+    font-size: 15px;
   }
-}
-
-@media (max-width: 427px) {
-  .item__text {
-    width: 130px;
+  .footer__text,
+  .footer__span {
+    font-size: 11px;
   }
 }
 
