--- a/css/style.css
+++ b/css/style.css
@@ -397,6 +397,27 @@
   }
 }
 
+@media (orientation: landscape) and (max-width: 916px) and (max-height: 415px) {
+  #header__logo {
+    width: 20vw;
+  }
+  .header__content {
+    padding: 45px 0 0;
+  }
+  .header__title,
+  .header__span {
+    font-size: 60px;
+  }
+  .header__desc {
+    font-size: 18px;
+    padding-top: 20px;
+    max-width: 377px;
+  }
+  #footer__logo {
+    max-width: 17vw;
+  }
+}
+
 @media (orientation: portrait) and (min-width: 400px) and (max-width: 820px) {
   .header {
     height: 70vh;
@@ -483,10 +504,120 @@
   }
   .footer__text,
   .footer__span {
-    font-size: 16px;
+    font-size: 15px;
   }
   .footer__inner {
     padding: 40px 0 50px;
+  }
+}
+
+@media (orientation: landscape) and (max-width: 670px) {
+  .header__content {
+    padding: 42px 0 0;
+    text-align: left;
+  }
+  .header__title,
+  .header__span {
+    font-size: 55px;
+  }
+  .header__desc {
+    font-size: 16px;
+    padding-top: 20px;
+    max-width: 352px;
+    margin: 0 0;
+  }
+  .item__text {
+    width: 104px;
+  }
+  .footer__text,
+  .footer__span {
+    font-size: 14px;
+  }
+}
+
+@media (orientation: landscape) and (max-height: 280px) {
+  .header__content {
+    padding: 26px 0 0;
+  }
+  .header__title,
+  .header__span {
+    font-size: 45px;
+  }
+  .header__desc {
+    font-size: 15px;
+    padding-top: 17px;
+    max-width: 330px;
+  }
+}
+
+@media (orientation: portrait) and (min-height: 710px) and (max-height: 720px) {
+  .item__text {
+    width: 117px;
+  }
+}
+
+@media (orientation: landscape) and (max-width: 480px) {
+  .header__content {
+    padding: 40px 0 0;
+  }
+  .header__title,
+  .header__span {
+    font-size: 45px;
+  }
+  .header__desc {
+    font-size: 14px;
+    padding-top: 13px;
+  }
+  .item__text {
+    font-size: 15px;
+    width: 77px;
+  }
+  .story__desc {
+    font-size: 14px;
+  }
+  .card__price {
+    font-size: 40px;
+  }
+  .card__list {
+    font-size: 15px;
+  }
+  .card__span {
+    font-size: 15px;
+  }
+  .footer__text,
+  .footer__span {
+    font-size: 15px;
+  }
+}
+
+@media (orientation: portrait) and (max-height: 570px) {
+  #header__logo {
+    max-width: 40vw;
+  }
+  .header {
+    height: 75vh;
+  }
+  .header__content {
+    padding: 40px 0 0;
+  }
+  .header__title,
+  .header__span {
+    font-size: 47px;
+  }
+  .header__desc {
+    font-size: 16px;
+    padding-top: 20px;
+  }
+  .story__desc,
+  .story__span {
+    font-size: 13px;
+  }
+  .footer__text,
+  .footer__span {
+    font-size: 13px;
+  }
+  #footer__logo {
+    max-width: 30vw;
   }
 }
 
@@ -537,6 +668,40 @@
   .footer__text,
   .footer__span {
     font-size: 11px;
+  }
+}
+
+@media (orientation: landscape) and (min-height: 768px) and (max-height: 1024px) {
+  .header {
+    height: 75vh;
+  }
+  .header__content {
+    padding: 100px 0 0;
+  }
+  .header__desc {
+    padding-top: 40px;
+  }
+}
+
+@media (orientation: landscape) and (min-height: 512px) and (max-height: 540px) {
+  #header__logo {
+    max-width: 30vw;
+  }
+  .header {
+    height: 90vh;
+  }
+  .header__content {
+    padding: 65px 0 0;
+  }
+  .header__title,
+  .header__span {
+    font-size: 70px;
+  }
+  .header__desc {
+    padding-top: 20px;
+  }
+  #footer__logo {
+    max-width: 25vw;
   }
 }
 
