--- a/css/style.css
+++ b/css/style.css
@@ -341,28 +341,30 @@
   .header__span {
     font-size: 60px;
   }
-  .header__desc {
+  /* .header__desc {
     font-size: 17px;
     padding-top: 25px;
-  }
+  } */
   .services__title,
-  .services__span {
+  .services__span,
+  .pricing__title {
     font-size: 40px;
   }
   .services__items {
     padding: 45px 0 50px;
   }
-  .item__text {
+  .item__text,
+  .story__desc,
+  .card__list,
+  .footer__text,
+  .footer__span {
     font-size: 17px;
   }
-  .story__desc {
-    font-size: 17px;
-  }
-  .story__span {
+  .story__span,
+  .card__span {
     font-size: 19px;
   }
   .pricing__title {
-    font-size: 40px;
     padding: 30px 0 20px;
   }
   .card {
@@ -376,21 +378,11 @@
   .card__price {
     font-size: 45px;
   }
-  .card__list {
-    font-size: 17px;
-  }
-  .card__span {
-    font-size: 19px;
-  }
   .card__btn {
     width: 175px;
   }
   .footer__inner {
     padding: 35px 0 45px;
-  }
-  .footer__text,
-  .footer__span {
-    font-size: 17px;
   }
   #footer__logo {
     max-width: 20vw;
@@ -439,8 +431,14 @@
   .header__span {
     font-size: 49px;
   }
-  .header__desc {
+  .header__desc,
+  .item__text,
+  .story__desc,
+  .card__list,
+  .card__span {
     font-size: 16px;
+  }
+  .header__desc {
     padding-top: 25px;
     margin: 0 auto;
   }
@@ -455,13 +453,11 @@
     padding: 40px 0 29px;
   }
   .item__text {
-    font-size: 16px;
     width: 129px;
     padding: 20px 0;
   }
   .story__desc {
     width: 307px;
-    font-size: 16px;
   }
   .story__span {
     font-size: 14px;
@@ -491,12 +487,6 @@
   }
   .card__price {
     font-size: 45px;
-  }
-  .card__list {
-    font-size: 16px;
-  }
-  .card__span {
-    font-size: 16px;
   }
   .card__btn {
     width: 180px;
@@ -564,29 +554,25 @@
   .header__span {
     font-size: 45px;
   }
-  .header__desc {
-    font-size: 14px;
-    padding-top: 13px;
-  }
-  .item__text {
-    font-size: 15px;
-    width: 77px;
-  }
+  .header__desc,
   .story__desc {
     font-size: 14px;
   }
-  .card__price {
-    font-size: 40px;
+  .header__desc {
+    padding-top: 13px;
   }
-  .card__list {
-    font-size: 15px;
-  }
-  .card__span {
-    font-size: 15px;
-  }
+  .item__text,
+  .card__list,
+  .card__span,
   .footer__text,
   .footer__span {
     font-size: 15px;
+  }
+  .item__text {
+    width: 77px;
+  }
+  .card__price {
+    font-size: 40px;
   }
 }
 
@@ -609,9 +595,7 @@
     padding-top: 20px;
   }
   .story__desc,
-  .story__span {
-    font-size: 13px;
-  }
+  .story__span,
   .footer__text,
   .footer__span {
     font-size: 13px;
@@ -641,11 +625,12 @@
   .header__span {
     font-size: 43px;
   }
-  .header__desc {
+  .header__desc,
+  .item__text,
+  .card__list {
     font-size: 15px;
   }
   .item__text {
-    font-size: 15px;
     width: 119px;
     padding: 15px 0;
   }
@@ -656,18 +641,13 @@
     width: 180px;
     height: 40px;
   }
-  .story__span {
+  .story__span,
+  .footer__text,
+  .footer__span {
     font-size: 11px;
   }
   .card__price {
     font-size: 40px;
-  }
-  .card__list {
-    font-size: 15px;
-  }
-  .footer__text,
-  .footer__span {
-    font-size: 11px;
   }
 }
 
