--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@
   background-image: url(../img/header_img.png);
   background-position: center;
   background-repeat: no-repeat;
-  background-attachment: scroll;
+  /* background-attachment: fixed; */
   background-size: cover;
   background-color: #d83526;
   width: 100%;
